# FTP_By_Qt

./: .gitignore  CMakeLists.txt
src/: ftp.qrc  ftpwindow.cpp  ftpwindow.h  main.cpp
src/qftp/: qftpdtp.cpp
